# permucate

./: .gitignore  LICENSE  README.md  pyproject.toml
permucate/: importance.py  learners.py  scoring.py  utils.py
permucate/data/: dr_learner.py  high_dim.py  hines_vim.py  non_gaussian.py
scripts/: README.md  config.yaml  configu_highdim.yaml  cross_val_vim_exp.py  ihdp_exp.py  variance_exp.py  variance_non_gaussian_exp.py
tests/: test_data.py  test_importance.py  test_learners.py
